# covid19-heatmap-api

./: .gitignore  Cargo.toml  Procfile  README.md  Rocket.toml  RocketDeployment.md  currentCountyCases.csv  tatus
dataset/: brazilStateDataFull.json  brazilstatescoords.csv  countryDataFull.json  countyCoords.json  fullCountyData.json  processCounties.py  updateData.sh
src/: main.rs  parser.rs
src/dataset/: .brazilstatescoords.json.swp  allAvailableData.json  brazilStateDataCoords.json  brazilstatenames.json  brazilstates.json  counties.json  countryCoords.json  countyCoords.json  currentGlobalData.json  fullCountyData.json  fullDataSet.json  fullGlobalData.json  populationMatch.py  prettifiedbrazilstates.json  processBrazil.py  processBrazilShort.py  processCountiesShort.py  updateData.sh  updateGlobalData.sh  updateLocalData.sh
