[package]
name = "covid19-heatmap-api"
version = "0.1.0"
authors = ["calvang <calvin.huang5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
#serde = { version = "1.0.104", features = ["derive"] }
#serde_json = "1.0.48"
clokwerk = { git = "https://github.com/mdsherry/clokwerk" }

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json"]